--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
     - docker push andriyze/multi-nginx
     - docker push andriyze/multi-server
     - docker push andriyze/multi-worker
+
+deploy:
+    provider: elastickbeanstalk
+    region: "ca-central-1"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-ca-central-1-717934892882"
+    bucket_path: "multi-docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
